# Practice_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
func_basic/: CMakeLists.txt
func_basic/src/: main.cpp
func_basic2/: CMakeLists.txt
func_basic2/src/: io.cpp  io.h  main.cpp
func_dataTypes/: CMakeLists.txt
func_dataTypes/src/: main.cpp  operation.cpp  operation.h
func_dataTypes/tests/: tests.cpp
func_headers/: CMakeLists.txt
func_headers/src/: add.cpp  add.h  main.cpp
func_strings/: CMakeLists.txt
func_strings/src/: main.cpp  userEntry.cpp  userEntry.h
prj_book_organizer/: CMakeLists.txt
prj_book_organizer/src/: bookshelf.cpp  bookshelf.h  booksort.cpp  booksort.h  main.cpp
qt_tutorial/: CMakeLists.txt
qt_tutorial/src/: Main.qml  main.cpp
stdio/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
